# mikrotik-service

./: .env.example  Cargo.toml
migration/: README.md
migration/src/: lib.rs  m20260403_000001_create_initial_tables.rs  m20260404_172022_create_audit_logs_table.rs  m20260404_172031_add_security_columns_to_users.rs  m20260404_172033_create_export_jobs_table.rs  m20260405_000001_create_permissions_tables.rs  m20260405_101500_create_mikrotik_clients_table.rs  m20260406_132000_encrypt_ssh_port.rs  m20260407_150000_create_interface_metrics.rs  m20260407_160000_create_config_snapshots.rs
src/: lib.rs  main.rs
src/cache/: mod.rs  redis_client.rs  user_cache.rs
src/config/: auth.rs  database.rs  mikrotik.rs  mod.rs  rabbitmq.rs  redis.rs  storage.rs
src/dto/: auth.rs  mikrotik.rs  mod.rs  user.rs
src/errors/: app_error.rs
src/export/: csv_exporter.rs  excel_exporter.rs  mod.rs
src/handlers/: auth_handler.rs  export_handler.rs  health_handler.rs  mikrotik_handler.rs  mod.rs  user_handler.rs
src/middlewares/: auth.rs  login_attempts.rs  mod.rs  rate_limit.rs
src/models/: audit_logs.rs  interface_metrics.rs  mikrotik_clients.rs  mikrotik_config_snapshots.rs  mod.rs  permissions.rs  role_permissions.rs  roles.rs  user_roles.rs  users.rs
src/pool/: mikrotik_pool.rs  mod.rs
src/queue/: mod.rs  rabbitmq_client.rs
src/routes/: auth_routes.rs  export_routes.rs  health.rs  mikrotik_routes.rs  mod.rs  user_routes.rs
src/services/: auth_service.rs  captcha_service.rs  mikrotik_service.rs  mod.rs  permission_service.rs  security_service.rs  storage_service.rs  (+1 more)
(+9 files in other folders)
