[workspace]
members = [".", "migration"]

[package]
name = "mikrotik-service"
version = "0.1.0"
edition = "2024"
default-run = "mikrotik-service"

[dependencies]
axum = { version = "0.7", features = ["multipart", "macros"] }
tokio = { version = "1.37", features = ["full"] }
tower-http = { version = "0.5", features = ["fs", "cors", "trace"] }
sea-orm = { version = "1.0.0", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros", "uuid"] }
sea-orm-migration = "1.0.0"
log = "0.4"
deadpool-redis = "0.15"
lapin = "2.3"
aws-sdk-s3 = "1.21"
aws-config = "1.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
dotenvy = "0.15"
validator = { version = "0.18", features = ["derive"] }
uuid = { version = "1.8", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
aes-gcm = "0.10"
jsonwebtoken = "9.3"
bcrypt = "0.15"
utoipa = { version = "4.2", features = ["axum_extras", "uuid"] }
utoipa-swagger-ui = { version = "6.0", features = ["axum"] }
migration = { path = "migration" }
dashmap = "6.1.0"
csv = "1.4.0"
xlsxwriter = "0.6.1"
once_cell = "1.21.4"
lettre = { version = "0.11.0", default-features = false, features = ["tokio1-rustls-tls", "smtp-transport", "builder"] }
futures-util = "0.3.32"
tower = { version = "0.5.3", features = ["util"] }
governor = "0.10.4"
image = "0.25.10"
bytes = "1.11.1"
